# rust_project_template

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  _config.yml  rustfmt.toml
.github/PULL_REQUEST_TEMPLATE/: sample_template.md
docker/: .env  cargo.env  docker-compose.yml  rust.env
scripts/: build_doc.sh  check_package.sh  chmod_exec.sh  ci.sh  format.sh  install_nightly.sh  install_pre-commit.sh  install_rust.sh  install_rustfmt.sh  pre-commit.sh  publish_dry.sh  test.sh
src/: another_mod.rs  lib.rs
src/sub_mod/: another_mod.rs  mod.rs
