[package]
# https://doc.rust-lang.org/cargo/reference/manifest.html
authors = ["Hiroshi Tsuyuki <kagemeka1@gmail.com>"]
categories = [
  "accessibility",
  "config",
  "development-tools",
  "rust-patterns",
]
description = "A template for Rust project"
documentation = "https://docs.rs/project_template"
edition = "2021"
homepage = "https://github.com/kagemeka/rust_project_template#readme"
keywords = ["rust", "template"]
# license = "MIT"
license-file = "LICENSE"
name = "project-template"
readme = "README.md"
repository = "https://github.com/kagemeka/rust_project_template"
rust-version = "1.58.1"
version = "0.1.5"
# workspace = "."
build = false # "scripts/build.rs"
# links = "foo"
default-run = "main"
exclude = [
  "/docker/",
  "/scripts/",
]
include = [
  #   "/src",
]
# publish = ["<registry>"]

[dependencies]
